# lem_python_in

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  author  file  lem_in.py  main.py  matrix_generator.py  plot.py  tkinter_test.py  visualise.py
files/: bug  file  file_1  file_10  file_11  file_12  file_13  file_14  file_2  file_3  file_4  file_5  file_6  file_7  file_8  file_9  love  love_1  matrix  subway
src/: ant.py  app.py  choose_path_group.c  create_steps.c  debug_display.c  display.c  err_atoi.c  errors.c  find_path_groups.c  free.c  generate_steps.c  get_all_paths.c  get_next_write.c  graph.c  graph.py  lem-in.h  lem_in.h  links.c  list.c  main.c  main.py  parse.c  parse.py  path.py  path_group.py  room.c  room.py  search.c  stack_operations.c  tkinter_test.py
src/breadth_algorithm/: calculate.c  find_path_groups.c  find_path_groups_helpers.c  reset.c
src/depth_algorithm/: choose_path_group.c  find.c  find_path_groups.c  get_all_paths.c
src/free/: free_1.c  free_2.c
src/list/: add.c  add_room.c  create.c  list.c
src/parse/: parse.c  parse_rooms.c
src_py/: app.py  graph.py  parse.py  path.py  room.py
test/: graph2.py  networkx_example.py
